Fix Tag gap-20 Being A Gap 15px

--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ a {
 }
 
 .gap-20 {
-    gap: 15px;
+    gap: 20px;
 }
 
 .align-center {
